The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.08 [20130124] [svn: r204]
  - device id VPD: add protocol specific port identifier
  - control extension mpage: add max sense data length
  - power condition mpage: FIDCPC->CCF_IDLE,
    FSBCPC->CCF_STAND, FSTCPC->CCF_STOPP (spc4r34+)
  - caching mpage: add SYNC_PROG field (sbc3r33)
  - block device characteristics VPD page additions sbc3r34
  - extended inquiry vpd page: add max supported sense data
    length
  - protocol-specific port information VPD page for SAS SSP,
    persistent connection (spl3r2)
  - add placeholder for third party copy VPD page
  - ./configure options:
    - change --enable-no-linux-bsg to --disable-linuxbsg
    - add --disable-scsistrings to reduce utility size
      with non-libsgutils build
  - point svn:externals to rev 464 of sg3_utils
    - report sdat_ovfl bit (if set) in sense data
    - sg_pt_linux: expand DID_ (host_byte) codes
      - cope with a transport error plus sense data
      - prefer major() over MAJOR() macro
    - win32: fixes for cygwin version 1.7.17 headers

ChangeLog for sdparm-1.07 [20120121] [svn: r188]
  - LB provisioning + Block limits VPD pages to sbc3r27
  - Enhanced phy control page: optical mode enabled (spl-r07)
  - Phy control and discover page: sync to spl2r02
  - sync with spc4r31+32 (handle status good with sense)
  - extended inquiry VPD: add POA_SUP, HRA_SUP and VSA_SUP
  - application tag mode page subcode 0xf0->0x2 (sbc3r28)
  - add 'sinq' pseudo VPD page for standard inquiry response
  - add power consumption mode and VPD pages (spc4r33)
  - point out some mode page numbers are vendor specific

ChangeLog for sdparm-1.06 [20101031] [svn: r166]
  - allow upper and lower case in field, (mode and vpd) page,
    vendor, transport or command matching
  - control mode page: add ATMPE and RWWP fields (spc4r27)